# Store-Intelligence

./: .dockerignore  .env.example  .gitignore  Dockerfile  PIPELINE-FIXES.md  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-dashboard.txt  requirements-dev.txt  requirements-pipeline.txt  requirements.txt
app/: anomalies.py  config.py  dashboard_summary.py  db.py  errors.py  funnel.py  health.py  heatmap.py  ingestion.py  logging.py  main.py  metrics.py  models.py  repository.py
app/routers/: events.py  health.py  stores.py
dashboard/: __init__.py  streamlit_app.py
data/: detection_benchmark.json  events.jsonl  generated_events.jsonl  pos_load_report.json  store_intelligence.db  zone_config.json
docs/: CHOICES.md  DESIGN.md
pipeline/: __init__.py  detector.py  event_builder.py  ingest_bridge.py  line_crossing.py  pipeline_runner.py  reid.py  schemas.py  tracker.py  zones.py
scripts/: benchmark_detection.py  load_pos.py  replay_events.py
tests/: conftest.py  test_anomalies.py  test_dashboard_summary.py  test_detection_benchmark.py  test_funnel.py  test_health.py  test_heatmap.py  test_historical_windows.py  test_ingestion.py  test_load_pos.py  test_metrics.py  test_pipeline_core.py  test_pipeline_e2e.py  test_purchase_attribution.py  test_replay_events.py  test_zone_engine.py
